<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Activity.LoginScreen">

    <RelativeLayout
        android:id="@+id/first_rlayout"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/first_rlayout"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/button_login"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:background="@drawable/rounded_button" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/button_login"
            android:text="@string/register"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:background="@drawable/rounded_button" />

        <ImageView
            android:id="@+id/fingerprint_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@id/text_quick_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_fingerprint" />

        <TextView
            android:id="@+id/text_quick_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/login_text"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/use_touch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_below="@+id/fingerprint_image"
            android:layout_centerHorizontal="true"
            android:text="@string/use_touch" />
    </RelativeLayout>


</RelativeLayout>

