<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/gray_100"
    android:layout_height="match_parent"
    tools:context=".Activity.RegisterActivity">

    <LinearLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="200dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:background="@color/colorPrimary"
                android:layout_height="wrap_content"
                app:titleTextColor="#000">

                <TextView
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:text="@string/back"
                    android:drawableLeft="@drawable/ic_back"
                    android:textStyle="bold"
                    android:textColor="@android:color/darker_gray"
                    android:drawablePadding="2dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/sign_up"
                    android:layout_width="wrap_content"
                    android:text="@string/signup"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@android:color/white"
                    android:layout_marginStart="120dp"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"/>
            </androidx.appcompat.widget.Toolbar>

        </RelativeLayout>


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tablayout"
            android:layout_width="match_parent"
            app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
            app:tabMaxWidth="0dp"
            app:tabGravity="fill"
            app:tabMode="fixed"
            app:tabIndicatorFullWidth="true"
            app:tabIndicatorHeight="4dp"
            app:tabTextColor="#EEEEEE"
            android:elevation="40dp"
            app:tabIndicatorColor="@color/colorAccent"
            app:tabSelectedTextColor="@color/colorAccent"
            android:layout_below="@id/toolbar"
            android:layout_height="wrap_content">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:text="@string/staffs"
                android:layout_height="wrap_content"/>

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:text="@string/students"
                android:layout_height="wrap_content"/>
        </com.google.android.material.tabs.TabLayout>

    </LinearLayout>



    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/relative_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>