<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.StaffsRegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="16dp">

                <EditText
                    android:id="@+id/staffs_name"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/rounded_edit_text"
                    android:drawableStart="@drawable/ic_baseline_account_circle_24"
                    android:drawableTint="@color/colorPrimary"
                    android:drawablePadding="16dp"
                    android:hint="Name"
                    android:paddingStart="10dp"
                    android:textStyle="normal" />

                <EditText
                    android:id="@+id/staffs_lastName"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rounded_edit_text"
                    android:drawableStart="@drawable/ic_baseline_account_circle_24"
                    android:drawableTint="@color/colorPrimary"
                    android:drawablePadding="16dp"
                    android:hint="Last name"
                    android:paddingStart="10dp"
                    android:textStyle="normal" />

                <EditText
                    android:id="@+id/staffs_email"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rounded_edit_text"
                    android:drawableStart="@drawable/ic_email"
                    android:drawableTint="@color/colorPrimary"
                    android:drawablePadding="16dp"
                    android:hint="Email"
                    android:paddingStart="10dp"
                    android:textStyle="normal" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rounded_edit_text"
                    android:drawableStart="@drawable/ic_password"
                    android:drawableTint="@color/colorPrimary"
                    android:drawablePadding="16dp"
                    android:hint="Password"
                    android:paddingStart="10dp"
                    android:textStyle="normal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="16dp">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="I accept "
                        android:layout_marginStart="16dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temrs_conditions"
                        android:layout_marginStart="4dp"
                        android:textColor="@color/colorPrimary"/>

                </LinearLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:layout_gravity="center"
                    android:background="@drawable/round_button"
                    android:text="@string/ft_login"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/gray_100"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Or"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/gray_100"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_weight="1"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:background="#3B5896">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/facebook"
                        app:tint="@android:color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Sign up with \nfacebook"
                        android:textColor="@android:color/white"
                        android:layout_marginStart="12dp"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_weight="1"
                app:cardCornerRadius="8dp"
                android:layout_marginStart="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:background="#05AAEC">

                    <ImageView
                        android:id="@+id/imageView_twitter"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/twitter"
                        app:tint="@android:color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Sign up with \ntwitter"
                        android:textColor="@android:color/white"
                        android:layout_marginStart="12dp"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Already have account ?"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:layout_marginStart="8dp"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>